# ft_vox

./: .gitignore  AThreadWrapper_8cpp.html  AThreadWrapper_8cpp__incl.map  AThreadWrapper_8cpp__incl.md5  AThreadWrapper_8hpp.html  AThreadWrapper_8hpp.js  AThreadWrapper_8hpp__dep__incl.map  AThreadWrapper_8hpp__dep__incl.md5  AThreadWrapper_8hpp__incl.map  AThreadWrapper_8hpp__incl.md5  AThreadWrapper_8hpp_source.html  AbstractEvent_8cpp.html  AbstractEvent_8cpp__incl.map  AbstractEvent_8cpp__incl.md5  AbstractEvent_8hpp.html  AbstractEvent_8hpp.js  AbstractEvent_8hpp__dep__incl.map  AbstractEvent_8hpp__dep__incl.md5  AbstractEvent_8hpp__incl.map  AbstractEvent_8hpp__incl.md5  AbstractEvent_8hpp_source.html  AudioData_8cpp.html  AudioData_8cpp.js  AudioData_8cpp__incl.map  AudioData_8cpp__incl.md5  AudioData_8hpp.html  AudioData_8hpp.js  AudioData_8hpp__dep__incl.map  AudioData_8hpp__dep__incl.md5  AudioData_8hpp__incl.map  AudioData_8hpp__incl.md5  AudioData_8hpp_source.html  Biome_8hpp.html  Biome_8hpp_source.html  BlockActionPacket_8cpp.html  BlockActionPacket_8cpp__incl.map  BlockActionPacket_8cpp__incl.md5  BlockActionPacket_8hpp.html  BlockActionPacket_8hpp.js  BlockActionPacket_8hpp__dep__incl.map  (+2947 more)
.github/workflows/: gh-pages.yml
docs/: Doxyfile  custom.css  header.html
docs/pages/: architecture.md  code_style_guide.md  docs_style_guide.md  entity.md  example.cpp  mainpage.md  network.md  render_loop.md  save_system.md  specs.md  style_guide.md  task_dependecy.md  thread.md
scripts/: compile_shaders.sh  download_cppVulkanAPI.sh  download_freetype.sh  download_glm.sh  download_glslc.sh  download_imgui.sh  download_portaudio.sh  download_stb.sh  download_tracy.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  (+144 more)
shaders/: chunk_shader.frag  chunk_shader.vert  common.glsl  gui_shader.vert  line_shader.frag  line_shader.vert  player_shader.vert  shadow_map_shader.frag  shadow_map_shader.vert  shadow_shader.vert  simple_shader.frag  simple_shader.vert  skybox_shader.frag  skybox_shader.vert  test_image_shader.frag  test_image_shader.vert  texture_shader.frag  texture_shader.vert
shaders/compute/: shading.comp
shaders/rasterization/: chunk_shader.frag  chunk_shader.vert  entity_shader.frag  entity_shader.vert  gui_shader.frag  line_shader.frag  line_shader.vert  player_shader.frag  player_shader.vert  shadow_shader.geom  shadow_shader.vert  test_image_shader.frag  water_shader.frag  water_shader.vert
shaders/rasterization/hud/: hud_shader.frag  hud_shader.vert  item_icon_shader.frag  item_icon_shader.vert  test_image_shader.frag  test_image_shader.vert
shaders/rasterization/misc/: prerender_item_icon_shader.frag  prerender_item_icon_shader.geom  prerender_item_icon_shader.vert
shaders/rasterization/shadow/: shadow_shader.frag  shadow_shader.geom  shadow_shader.vert
shaders/rasterization/sky/: box.frag  box.vert  sun.frag  sun.vert
shaders/rasterization/water/: water_shader.frag  water_shader.vert
shaders/ray_tracing/: raytrace.rchit  raytrace.rgen  raytrace.rmiss
shaders/sky/: sun.frag  sun.vert
src/: alternative_main.cpp  define.hpp  main.cpp  mainpage.dox  server_define.hpp  server_main.cpp  tracy_globals.cpp  tracy_globals.hpp
src/app/: Debug.hpp  DebugGui.cpp  DebugGui.hpp  Settings.cpp  Settings.hpp  application.cpp  application.hpp
src/app/event/: AbstractEvent.cpp  AbstractEvent.hpp  EventManager.cpp  EventManager.hpp  Events.hpp
src/app/network/: ThreadSafePacketQueue.hpp  server_main.cpp
src/app/network/client/: Client.cpp  Client.hpp  ClientPacketHandler.cpp  ClientPacketHandler.hpp  ClientSocket.cpp  ClientSocket.hpp
src/app/network/server/: Server.cpp  Server.hpp  ServerPacketHandler.cpp  ServerPacketHandler.hpp  ServerSocket.cpp  ServerSocket.hpp
src/app/network/shared/: Connection.cpp  Connection.hpp  ConnectionSocket.cpp  ConnectionSocket.hpp  IncomingPacketList.cpp  IncomingPacketList.hpp  PacketFactory.cpp  PacketFactory.hpp  Poller.cpp  Poller.hpp  Socket.cpp  Socket.hpp
src/app/perlin/: Perlin.cpp  Perlin.hpp  testPerlin.cpp
src/app/render/: renderer.cpp  renderer.hpp  vk_helper.cpp  vk_helper.hpp
src/app/scenes/: Camera.cpp  Camera.hpp  WorldScene.cpp  WorldScene.hpp
src/app/sound/: AudioData.cpp  AudioData.hpp  SoundEngine.cpp  SoundEngine.hpp  SoundList.hpp  audio_test  audio_test.cpp
src/app/threads/: AThreadWrapper.cpp  AThreadWrapper.hpp  Status.cpp  Status.hpp  ThreadSafeQueue.hpp
src/app/vulkan/: BindlessDescriptor.cpp  BindlessDescriptor.hpp  Buffer.cpp  Buffer.hpp  Command.hpp  Descriptor.cpp  Descriptor.hpp  Image.cpp  Image.hpp  MemoryRange.hpp  ObjLoader.hpp  Pipeline.hpp  ShaderCommon.hpp  ShaderCommun.hpp  Swapchain.cpp  Swapchain.hpp  TextRenderer.cpp  TextRenderer.hpp  VulkanAPI.cpp  VulkanAPI.hpp  VulkanMemoryAllocator.cpp  VulkanMemoryAllocator.hpp  chunk_mesh.cpp  draw_buffer.cpp  instance_data.cpp  item_mesh.cpp  mesh.cpp  raytracing.cpp  render_loop.cpp  render_update.cpp  vk_define.hpp  vk_helper.cpp  vk_helper.hpp
src/app/window/: input.cpp  input.hpp  window.cpp  window.hpp
src/app/world/: Block.cpp  Block.hpp  Chunk.cpp  Chunk.hpp  ChunkData.cpp  ClientWorld.cpp  ClientWorld.hpp  ClientWorldECS.cpp  ClientWorldNetwork.cpp  CreateMeshData.cpp  CreateMeshData.hpp  Item.cpp  Item.hpp  Map.cpp  Map.hpp  Player.cpp  Player.hpp  ServerWorld.cpp  ServerWorld.hpp  ServerWorldBlocks.cpp  ServerWorldNetwork.cpp  ServerWorldTickets.cpp  TicketManager.cpp  TicketManager.hpp  World.cpp  World.hpp  WorldGenerator.cpp  WorldGenerator.hpp
src/utils/: List.hpp  RLE_TEST.hpp  Timer.hpp  ft_format.hpp  hashes.hpp  logger.cpp  logger.hpp  math_utils.hpp
(+142 files in other folders)
